--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -32,6 +32,7 @@ include_directories(
 	${GLEW_INCLUDE_DIRS})
 
 add_executable(${PROJECT_NAME} ${SOURCES})
+set_target_properties(${PROJECT_NAME} PROPERTIES MACOSX_BUNDLE TRUE)
 add_definitions(
 	-std=c++11)
 
