--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -9,6 +9,8 @@
 cmake_minimum_required (VERSION 2.8)
 
 set(PROJECT_NAME glCube)
+set(PROJECT_VERSION_MAJOR 0)
+set(PROJECT_VERSION_MINOR 1)
 project(${PROJECT_NAME})
 
 find_package(GLEW REQUIRED)
@@ -17,16 +19,21 @@ find_package(OpenGL REQUIRED)
 find_package(PkgConfig REQUIRED)
 pkg_search_module(GLFW REQUIRED glfw3)
 
-set(SRC_DIR src)
-set(INCLUDE_DIR include)
+set(SRC_DIR "${CMAKE_SOURCE_DIRECTORY}src")
+set(INCLUDE_DIR "${CMAKE_SOURCE_DIRECTORY}include")
+set(SHADER_DIR "${CMAKE_SOURCE_DIRECTORY}shader")
 set(SOURCES
-	${SRC_DIR}/Game.cpp
-	${SRC_DIR}/GLWindow.cpp)
+	"${SRC_DIR}/Game.cpp"
+	"${SRC_DIR}/GLWindow.cpp")
 
+configure_file (
+	"${INCLUDE_DIR}/GLWindow.hpp.cmake"
+	"${PROJECT_BINARY_DIR}/GLWindow.hpp")
 
 include_directories(
 	${SRC_DIR}
 	${INCLUDE_DIR}
+	${PROJECT_BINARY_DIR}
 	${OPENGL_INCLUDE_DIRS}
 	${GLFW_INCLUDE_DIRS}
 	${GLEW_INCLUDE_DIRS})
