--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -8,7 +8,7 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-#include CMakeExtra for glm
+#include extra cmake rules for glm
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 set(PROJECT_NAME glCube)
@@ -35,6 +35,17 @@ set(GEOMETRY_DIR "${COMPILED_SHADER_DIR}/geometry")
 set(TESS_CONTROL_DIR "${COMPILED_SHADER_DIR}/tess_control")
 set(TESS_EVAL_DIR "${COMPILED_SHADER_DIR}/tess_eval")
 
+set(RES_DIR "${PROJECT_SOURCE_DIR}/res")
+set(COMPILED_RES_DIR "${PROJECT_BINARY_DIR}/res")
+set(RES_MESH_DIR "${COMPILED_RES_DIR}/mesh")
+set(RES_IMG_DIR "${COMPILED_RES_DIR}/img")
+
+set(SOIL_LIB "${SOIL_LIB}")
+set(SOIL_DIR "${PROJECT_SOURCE_DIR}/SOIL")
+set(SOIL_SUBDIR "SOIL")
+set(SOIL_INCLUDE "${SOIL_DIR}/include")
+set(SOIL_LINK "${PROJECT_BUILD_DIR}/SOIL/libSOIL.a")
+
 set(SOURCES
 	"${SRC_DIR}/Main.cpp"
 	"${SRC_DIR}/Renderer.cpp"
@@ -42,16 +53,21 @@ set(SOURCES
 	"${SRC_DIR}/Window.cpp"
 	"${RO_DIR}/Mesh.cpp"
 	"${RO_DIR}/Shader.cpp"
+	"${RO_DIR}/Texture.cpp"
 	"${RO_DIR}/RenderObject.cpp"
-	"${RO_DIR}/TriObject.cpp")
+	"${RO_DIR}/TriObject.cpp"
+	"${RO_DIR}/CubeObject.cpp")
 
 configure_file(
 	"${INCLUDE_DIR}/Config.hpp.cmake"
 	"${PROJECT_BINARY_DIR}/Config.hpp")
 
 file(COPY ${SHADER_DIR} DESTINATION ${CMAKE_BINARY_DIR})
+file(COPY ${RES_DIR}    DESTINATION ${CMAKE_BINARY_DIR})
 
 include_directories(
+	${SOIL_INCLUDE}
+	${SOIL_DIR}
 	${SRC_DIR}
 	${INCLUDE_DIR}
 	${RO_INCLUDE_DIR}
@@ -63,13 +79,14 @@ include_directories(
 	${GLU_INCLUDE_DIRS}
 	${GLM_INCLUDE_DIRS})
 
+add_subdirectory(${SOIL_SUBDIR})
+link_directories(${SOIL_DIR})
 add_executable(${PROJECT_NAME} ${SOURCES})
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 	#set_target_properties(${PROJECT_NAME} PROPERTIES MACOSX_BUNDLE TRUE)
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
 
-#set_target_properties(${PROJECT_NAME} PROPERTIES MACOSX_BUNDLE TRUE)
 add_definitions(
 	-std=c++11)
 
@@ -77,4 +94,5 @@ target_link_libraries(${PROJECT_NAME}
 	${OPENGL_LIBRARIES}
 	${GLFW_LIBRARIES}
 	${GLEW_LIBRARIES}
-	${GLU_LIBRARIES})
+	${GLU_LIBRARIES}
+	${SOIL_SUBDIR})
