--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -8,7 +8,6 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-#include extra cmake rules for glm
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 set(PROJECT_VERSION_MAJOR 0)
@@ -25,9 +24,10 @@ set(SRC_DIR "${PROJECT_SOURCE_DIR}/src")
 set(RO_DIR "${SRC_DIR}/render_objects")
 set(INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
 set(RO_INCLUDE_DIR "${INCLUDE_DIR}/render_objects")
-set(SHADER_DIR "${PROJECT_SOURCE_DIR}/shader")
 
+set(SHADER_DIR "${PROJECT_SOURCE_DIR}/shader")
 set(COMPILED_SHADER_DIR "${PROJECT_BINARY_DIR}/shader")
+
 set(FRAGMENT_DIR "${COMPILED_SHADER_DIR}/fragment")
 set(VERTEX_DIR "${COMPILED_SHADER_DIR}/vertex")
 set(GEOMETRY_DIR "${COMPILED_SHADER_DIR}/geometry")
@@ -36,12 +36,14 @@ set(TESS_EVAL_DIR "${COMPILED_SHADER_DIR}/tess_eval")
 
 set(RES_DIR "${PROJECT_SOURCE_DIR}/res")
 set(COMPILED_RES_DIR "${PROJECT_BINARY_DIR}/res")
+
 set(RES_MESH_DIR "${COMPILED_RES_DIR}/mesh")
 set(RES_IMG_DIR "${COMPILED_RES_DIR}/img")
 
 set(SOIL "SOIL")
 set(SOIL_DIR "${PROJECT_SOURCE_DIR}/${SOIL}")
-set(SOIL_INCLUDE "${SOIL_DIR}/include")
+set(SOIL_HEADERS "${SOIL_DIR}/include")
+set(SOIL_API "${SOIL_DIR}/api")
 
 set(SOURCES
 	"${SRC_DIR}/Main.cpp"
@@ -60,8 +62,8 @@ configure_file(
 	"${PROJECT_BINARY_DIR}/Config.hpp")
 
 include_directories(
-	${SOIL_INCLUDE}
-	${SOIL_DIR}
+	${SOIL_API}
+	${SOIL_HEADERS}
 	${SRC_DIR}
 	${INCLUDE_DIR}
 	${RO_INCLUDE_DIR}
@@ -79,7 +81,7 @@ add_executable(${PROJECT_NAME} ${SOURCES})
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 	#set_target_properties(${PROJECT_NAME} PROPERTIES MACOSX_BUNDLE TRUE)
-endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
+endif() 
 
 add_custom_command(
 	TARGET ${PROJECT_NAME}
