--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -74,7 +74,7 @@ include_directories(
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
-set_target_properties(${PROJECT_NAME} PROPERTIES MACOSX_BUNDLE TRUE)
+#set_target_properties(${PROJECT_NAME} PROPERTIES MACOSX_BUNDLE TRUE)
 
 add_custom_command(
 	TARGET ${PROJECT_NAME}
