Moving cpp files to their own  directories now

--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -22,7 +22,7 @@ set(INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
 set(SOURCES
 	"${SRC_DIR}/Camera.cpp"
 	"${SRC_DIR}/GlRenderer.cpp"
-	"${SRC_DIR}/ResourceLoader.cpp"
+	"${SRC_DIR}/core/ResourceLoader.cpp"
 	"${SRC_DIR}/Window.cpp"
 	"${SRC_DIR}/Light.cpp"
 	"${SRC_DIR}/Mesh.cpp"
