--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -20,15 +20,15 @@ set(CORE_DIR "${SRC_DIR}/core")
 set(INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
 
 set(SOURCES
-	"${SRC_DIR}/Camera.cpp"
-	"${SRC_DIR}/GlRenderer.cpp"
 	"${SRC_DIR}/core/ResourceLoader.cpp"
-	"${SRC_DIR}/Window.cpp"
-	"${SRC_DIR}/Light.cpp"
-	"${SRC_DIR}/Mesh.cpp"
-	"${SRC_DIR}/Shader.cpp"
-	"${SRC_DIR}/Texture.cpp"
-	"${SRC_DIR}/RenderObject.cpp")
+	"${SRC_DIR}/graphics/Camera.cpp"
+	"${SRC_DIR}/graphics/GlRenderer.cpp"
+	"${SRC_DIR}/graphics/Window.cpp"
+	"${SRC_DIR}/graphics/Light.cpp"
+	"${SRC_DIR}/graphics/Mesh.cpp"
+	"${SRC_DIR}/graphics/Shader.cpp"
+	"${SRC_DIR}/graphics/Texture.cpp"
+	"${SRC_DIR}/graphics/RenderObject.cpp")
 
 include_directories(
 	${SRC_DIR}
