Updating .travis to try and get things building

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - git submodule update
 
 before_script:
-  - ls
+  - mv CmakeLists.txt CMakeLists.txt
   - mkdir build
   - cd build
   - cmake ..
