--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
 
 before-install:
   - sudo apt-get update -qq
-  - sudo apt-get install cmake=3.0
+  - sudo apt-get install glew
 
 install:
   - git submodule init
