--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ install:
   - git submodule update
 
 before_script:
-  - mv CmakeLists.txt CMakeLists.txt
   - mkdir build
   - cd build
   - cmake ..
 
 script: make
+ git commit -m "Back to cmake v. 2.8"
