Use system glew

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,28 +1,28 @@
- # 
+ #
  # This file is part of the pneumatic game engine
- # 
+ #
  # Copyright (c) 2014 George Burton
- # 
+ #
  # THIS SOFTWARE IS PROVIDED 'AS-IS', WITHOUT ANY EXPRESS OR IMPLIED
  # WARRANTY. IN NO EVENT WILL THE AUTHORS BE HELD LIABLE FOR ANY DAMAGES
  # ARISING FROM THE USE OF THIS SOFTWARE.
- # 
- # Permission is granted to anyone to use this software for any purpose,  
- # including commercial applications, and to alter it and redistribute it  
+ #
+ # Permission is granted to anyone to use this software for any purpose,
+ # including commercial applications, and to alter it and redistribute it
  # freely, subject to the following restrictions:
- # 
- #    1. The origin of this software must not be misrepresented; you must not  
- #       claim that you wrote the original software. If you use this software  
- #       in a product, an acknowledgment in the product documentation would be  
+ #
+ #    1. The origin of this software must not be misrepresented; you must not
+ #       claim that you wrote the original software. If you use this software
+ #       in a product, an acknowledgment in the product documentation would be
  #       appreciated but is not required.
- # 
- #    2. Altered source versions must be plainly marked as such, and must not be  
+ #
+ #    2. Altered source versions must be plainly marked as such, and must not be
  #       misrepresented as being the original software.
- # 
- #    3. This notice may not be removed or altered from any source  
+ #
+ #    3. This notice may not be removed or altered from any source
  #       distribution.
- # 
- # 
+ #
+ #
 
 cmake_minimum_required (VERSION 2.8)
 
@@ -62,9 +62,11 @@ include_directories(
 # System OpenGL and GLEW
 #========================
 find_package(OpenGL REQUIRED)
+find_package(GLEW REQUIRED)
 
 include_directories(
 	${OPENGL_INCLUDE_DIRS}
+	${GLEW_INCLUDE_DIRS}
 	${GLU_INCLUDE_DIRS})
 
 # SOIL
@@ -99,14 +101,6 @@ add_subdirectory(${GLM_INCLUDE_DIRS})
 link_directories(${GLM_INCLUDE_DIRS})
 include_directories(${GLM_INCLUDE_DIRS})
 
-# GLEW
-#======
-set (GLEW_DIR "${PROJECT_SOURCE_DIR}/thirdparty/glew")
-add_subdirectory (${GLEW_DIR})
-link_directories (${GLEW_DIR})
-include_directories (${GLEW_INCLUDE_DIR})
-message("${GLEW_LIB_DIR}")
-
 # Project build
 #===============
 add_library(${PROJECT_NAME} ${SOURCES})
@@ -114,8 +108,6 @@ add_library(${PROJECT_NAME} ${SOURCES})
 add_definitions(
 	-std=c++1y
 	-Wall)
-	
-message("${GLEW_LIBRARIES}")
 
 target_link_libraries(${PROJECT_NAME}
 	${SOIL_LIBRARIES}
