--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,7 +108,8 @@ add_library(${PROJECT_NAME} ${SOURCES})
 add_definitions(
 	-std=c++1y
 	-Wall
-	-fno-exceptions)
+	-fno-exceptions
+	-fno-rtti)
 
 target_link_libraries(${PROJECT_NAME}
 	${SOIL_LIBRARIES}
