--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "thirdparty/glm"]
 	path = thirdparty/glm
 	url = https://github.com/g-truc/glm.git
+[submodule ".\\thirdparty\\gl3w"]
+	path = .\\thirdparty\\gl3w
+	url = https://github.com/skaslev/gl3w
